# psp2wpp

./: CMakeLists.txt  LICENSE  README.md  exports.yml
color/: cvt.txt  list.txt
color/list/: effects_0406_ruby.txt  effects_0408_01_orange.txt  effects_A1.txt  effects_bluewhite_05.txt  effects_color_vari_2g_01.txt  effects_color_vari_2g_02.txt  effects_default_0512_01.txt  effects_green_0512_01.txt  effects_limegreen_0513_02.txt  effects_maintosh.txt  effects_peach_0512_001.txt  effects_purple_01.txt  effects_purplered.txt  effects_yellow_0512_01.txt  iboot.txt  waveparam_effects_0407_purple_01.txt  waveparam_effects_0411_purple_02.txt  waveparam_effects_0415_A5.txt  waveparam_effects_0518_dalia.txt  waveparam_effects_0518_gray_FLAT.txt  waveparam_effects_0518_ruby.txt  waveparam_effects_black.txt  waveparam_effects_blueTB_0513_01.txt  waveparam_effects_blue_FLAT.txt  waveparam_effects_casis.txt  waveparam_effects_color_vari_2g_03.txt  waveparam_effects_color_vari_2g_04.txt  waveparam_effects_koiao_0512_01.txt  waveparam_effects_marrygold.txt  waveparam_effects_original_01.txt  waveparam_effects_redTB_0513_01.txt  waveparam_effects_turquoise_0513_01.txt
preset/: waveparam.txt
src/: conf_reader.c  config_parser.h  main.c  wave.h  wave_config.c
